[package]
name = "bmp280-core"
version = "0.1.3"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"

description = "Driver for BMP280"
repository = "https://github.com/qiuchengxuan/bmp280"
readme = "README.md"
keywords = ["BMP280", "embedded"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
hex-literal = "0.3"
